# Inverted-Index

./: .gitignore  Cargo.toml  README.md
src/: bin_indexer.rs  compressor.rs  decompressor.rs  disk_io.rs  external_sorter.rs  indexer.rs  main.rs  parser.rs  query_processor.rs  term_query_processor.rs  unicode_handler.rs  utils.rs
static/: index.html
