[package]
name = "Inverted-Index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
regex = { version = "1.10.2", features = [] }
unicode-normalization = "0.1.22"
unicode-segmentation = "1.10.1"

[features]
debug_unicode = []
