[package]
name = "Inverted-Index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
regex = { version = "1.10.2", features = [] }
unicode-normalization = "0.1.22"
unicode-segmentation = "1.10.1"
stop-words = "0.8.0"
lazy_static = "1.4.0"
chrono = { version = "0.4.31", features = [] }
bimap = "0.6.3"
stream-vbyte = "0.4.1"
byteorder = "1.4"
log = "0.4.20"
simplelog = "0.12.1"

[features]
debug_unicode = []
